# Rust-slideapp

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  package-lock.json  package.json  tailwind.config.cjs  tauri.conf.json  tsconfig.json  vite.config.ts
slides/: 01-intro.ts  02-example.ts  03-自己紹介.ts
src/: builder.rs  main.rs  main.ts  runtime.ts  watcher.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: builder.rs  importer.rs  main.rs
src/slides/: 01-intro.ts  02-example.ts  03-de-title.ts  04-de-cli.ts  05-de-kde.ts  06-de-gnome.ts  07-de-cinnamon.ts  08-de-xfce.ts  09-de-hyprland.ts
src/styles/: theme.css
web/: index.html  runtime.ts
web/styles/: theme.css
